// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Textarea should render correctly 1`] = `
"<div class=\\"wrapper   \\"><textarea placeholder=\\"placeholder\\"></textarea><style>
          .wrapper {
            display: inline-flex;
            box-sizing: border-box;
            user-select: none;
            border-radius: 5px;
            border: 1px solid #eaeaea;
            color: #000;
            transition: border 0.2s ease 0s, color 0.2s ease 0s;
            min-width: 12.5rem;
            max-width: 95vw;
            --textarea-font-size: calc(0.875 * 16px);
            --textarea-height: auto;
            width: initial;
            height: var(--textarea-height);
            margin: 0 0 0 0;
          }

          .wrapper.hover {
            border-color: #666;
          }

          .wrapper.disabled {
            background-color: #fafafa;
            border-color: #eaeaea;
            cursor: not-allowed;
          }

          textarea {
            background-color: transparent;
            box-shadow: none;
            display: block;
            font-family: \\"Inter\\", -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", sans-serif;
            font-size: var(--textarea-font-size);
            width: 100%;
            height: var(--textarea-height);
            border: none;
            outline: none;
            padding: calc(0.5 * 16px) calc(0.5 * 16px) calc(0.5 * 16px)
              calc(0.5 * 16px);
            resize: none;
          }

          .disabled > textarea {
            cursor: not-allowed;
          }

          textarea:-webkit-autofill,
          textarea:-webkit-autofill:hover,
          textarea:-webkit-autofill:active,
          textarea:-webkit-autofill:focus {
            -webkit-box-shadow: 0 0 0 30px #fff inset !important;
          }
        </style></div>"
`;

exports[`Textarea should work with different styles 1`] = `
"<div><div class=\\"wrapper   \\"><textarea></textarea><style>
          .wrapper {
            display: inline-flex;
            box-sizing: border-box;
            user-select: none;
            border-radius: 5px;
            border: 1px solid #666;
            color: #000;
            transition: border 0.2s ease 0s, color 0.2s ease 0s;
            min-width: 12.5rem;
            max-width: 95vw;
            --textarea-font-size: calc(0.875 * 16px);
            --textarea-height: auto;
            width: initial;
            height: var(--textarea-height);
            margin: 0 0 0 0;
          }

          .wrapper.hover {
            border-color: #666;
          }

          .wrapper.disabled {
            background-color: #fafafa;
            border-color: #eaeaea;
            cursor: not-allowed;
          }

          textarea {
            background-color: transparent;
            box-shadow: none;
            display: block;
            font-family: \\"Inter\\", -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", sans-serif;
            font-size: var(--textarea-font-size);
            width: 100%;
            height: var(--textarea-height);
            border: none;
            outline: none;
            padding: calc(0.5 * 16px) calc(0.5 * 16px) calc(0.5 * 16px)
              calc(0.5 * 16px);
            resize: none;
          }

          .disabled > textarea {
            cursor: not-allowed;
          }

          textarea:-webkit-autofill,
          textarea:-webkit-autofill:hover,
          textarea:-webkit-autofill:active,
          textarea:-webkit-autofill:focus {
            -webkit-box-shadow: 0 0 0 30px #fff inset !important;
          }
        </style></div><div class=\\"wrapper   \\"><textarea width=\\"20%\\"></textarea><style>
          .wrapper {
            display: inline-flex;
            box-sizing: border-box;
            user-select: none;
            border-radius: 5px;
            border: 1px solid #eaeaea;
            color: #000;
            transition: border 0.2s ease 0s, color 0.2s ease 0s;
            min-width: 12.5rem;
            max-width: 95vw;
            --textarea-font-size: calc(0.875 * 16px);
            --textarea-height: auto;
            width: 20%;
            height: var(--textarea-height);
            margin: 0 0 0 0;
          }

          .wrapper.hover {
            border-color: #666;
          }

          .wrapper.disabled {
            background-color: #fafafa;
            border-color: #eaeaea;
            cursor: not-allowed;
          }

          textarea {
            background-color: transparent;
            box-shadow: none;
            display: block;
            font-family: \\"Inter\\", -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", sans-serif;
            font-size: var(--textarea-font-size);
            width: 100%;
            height: var(--textarea-height);
            border: none;
            outline: none;
            padding: calc(0.5 * 16px) calc(0.5 * 16px) calc(0.5 * 16px)
              calc(0.5 * 16px);
            resize: none;
          }

          .disabled > textarea {
            cursor: not-allowed;
          }

          textarea:-webkit-autofill,
          textarea:-webkit-autofill:hover,
          textarea:-webkit-autofill:active,
          textarea:-webkit-autofill:focus {
            -webkit-box-shadow: 0 0 0 30px #fff inset !important;
          }
        </style></div><div class=\\"wrapper   \\"><textarea height=\\"100px\\"></textarea><style>
          .wrapper {
            display: inline-flex;
            box-sizing: border-box;
            user-select: none;
            border-radius: 5px;
            border: 1px solid #eaeaea;
            color: #000;
            transition: border 0.2s ease 0s, color 0.2s ease 0s;
            min-width: 12.5rem;
            max-width: 95vw;
            --textarea-font-size: calc(0.875 * 16px);
            --textarea-height: 100px;
            width: initial;
            height: var(--textarea-height);
            margin: 0 0 0 0;
          }

          .wrapper.hover {
            border-color: #666;
          }

          .wrapper.disabled {
            background-color: #fafafa;
            border-color: #eaeaea;
            cursor: not-allowed;
          }

          textarea {
            background-color: transparent;
            box-shadow: none;
            display: block;
            font-family: \\"Inter\\", -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", sans-serif;
            font-size: var(--textarea-font-size);
            width: 100%;
            height: var(--textarea-height);
            border: none;
            outline: none;
            padding: calc(0.5 * 16px) calc(0.5 * 16px) calc(0.5 * 16px)
              calc(0.5 * 16px);
            resize: none;
          }

          .disabled > textarea {
            cursor: not-allowed;
          }

          textarea:-webkit-autofill,
          textarea:-webkit-autofill:hover,
          textarea:-webkit-autofill:active,
          textarea:-webkit-autofill:focus {
            -webkit-box-shadow: 0 0 0 30px #fff inset !important;
          }
        </style></div></div>"
`;
